# ivtools

./: .dockerignore  .gitignore  AGENTS.md  APPENDIX-A-DRAWING-EDITOR.md  APPENDIX-B-COMTERP-EXAMPLES.md  APPENDIX-C-IVTOOLS-PROGRAMMING.md  APPENDIX-D-FLOWTRAN.md  ARCHBUILD.sh  CHANGES  CHANGES-0.4  CHANGES-0.5  CHANGES-0.9  CHANGES-1.0  CLAUDE.md  CONTRIBUTING.md  COPYING  COPYRIGHT  COPYRIGHT.proposed  Dockerfile.ci  INSTALL  INSTALL.OLD  INSTALL.old  INTRODUCTION.md  Imakefile  MANIFEST  MANIFEST.comterp  MANIFEST.comterp~  MANIFEST.perceps  Makefile  Makefile.am  Makefile.orig  README  README.cygwin  README.ivmkcm  REVIEW.md  VERSION  aclocal.m4  autogen.sh  comtop.tgz  configure  (+6 more)
src/: Imakefile  Makefile  Makefile.am
src/ACE-lite/: Imakefile  NOTICE  event_handler.c  log_msg.c  reactor.c  sock.c
src/AceDispatch/: Imakefile  Makefile  ace_dispatcher.c  ace_dispatcher.cc  ace_dispatcher.h  ace_iohandler.cc  ace_iohandler.h
src/AttrGlyph/: Imakefile  Makefile  attredit.c  attredit.cc  attredit.h
src/Attribute/: Imakefile  Makefile  _comterp.h  _comutil.h  alist.c  alist.h  aliterator.c  aliterator.h  attribute.c  attribute.cc  attribute.h  attrlist.c  attrlist.cc  attrlist.h  attrvalue.c  attrvalue.cc  attrvalue.h  classid.h  commodule.c  commodule.cc  commodule.h  lexscan.c  lexscan.h  paramlist.c  paramlist.cc  paramlist.h
src/ComGlyph/: Imakefile  Makefile  attrdialog.c  attrdialog.cc  attrdialog.h  comtextedit.c  comtextedit.h  comtextview.c  comtextview.cc  comtextview.h  terpdialog.c  terpdialog.cc  terpdialog.h
src/ComTerp/: ARCHITECTURE.md  ARG-LEVELS.md  FUNC-AND-ARGS-DESIGN.md  HACKING.md  Imakefile  Makefile  POSTFIX-INDEXING.md  WishList  _comterp.h  _comutil.h  assignfunc.c  assignfunc.cc  assignfunc.h  bitfunc.cc  bitfunc.h  boolfunc.c  boolfunc.cc  boolfunc.h  bquotefunc.c  bquotefunc.h  charfunc.cc  charfunc.h  comfunc.c  comfunc.cc  comfunc.h  comhandler.c  comhandler.cc  comhandler.h  commodule.h  comterp.c  comterp.cc  comterp.h  comterpserv.c  comterpserv.cc  comterpserv.h  comvalue.c  comvalue.cc  comvalue.h  condfunc.c  condfunc.cc  (+60 more)
src/ComUnidraw/: Imakefile  Makefile  comclasses.h  comeditor.c  comeditor.cc  comeditor.h  comkit.c  comkit.h  comterp-acehandler.c  comterp-acehandler.h  comterp-iohandler.c  comterp-iohandler.cc  comterp-iohandler.h  dialogfunc.c  dialogfunc.cc  dialogfunc.h  grdotfunc.c  grdotfunc.cc  grdotfunc.h  grfunc.c  grfunc.cc  grfunc.h  grlistfunc.c  grlistfunc.h  groupfunc.c  groupfunc.cc  groupfunc.h  grstatfunc.c  grstatfunc.cc  grstatfunc.h  grstrmfunc.c  grstrmfunc.cc  grstrmfunc.h  highlightfunc.c  highlightfunc.h  nfunc.c  nfunc.h  pixelcmds.c  pixelcmds.h  pixelfunc.c  (+9 more)
src/ComUtil/: ARCHITECTURE.md  Imakefile  Makefile  _lexscan.c  _lexscan.cc  _parser.c  _parser.cc  _scanner.c  _scanner.cc  atox.c  comerr.c  comerr.cc  comterp.arg  comterp.ci  comterp.err  comterp.h  comutil.arg  comutil.ci  comutil.h  dmm.c  dmm.cc  errfile.c  errfile.cc  errsys.c  errsys.cc  funcptrs.c  funcptrs.cc  lexscan.c  mblock.c  mblock.cc  optable.c  optable.cc  parser.c  popen2.c  popen2.cc  scanner.c  symbols.c  symbols.cc  ttyecho.c  txtutil.c  (+6 more)
src/Dispatch/: Imakefile  Makefile  ace_dispatcher.c  ace_iohandler.c  dispatcher.c  dispatcher.cc  iohandler.c  iostreamb.c  netinet_in.h  rpcbuf.c  rpcbuf.cc  rpcreader.cc  rpcregistry.c  rpcregistry.cc  rpcstream.c  rpcstream.cc  rpcwriter.cc
src/DrawServ/: #drawfunc.c#  #drawlink.c#  .#drawfunc.c  .#drawlink.c  HACKING.md  Imakefile  Makefile  WishList  ackback-handler.c  ackback-handler.cc  ackback-handler.h  comcatalog.c  comcatalog.h  comclasses.h  comcomps.c  comcomps.h  comcreator.c  comcreator.h  comkit.c  comkit.h  comviews.c  comviews.h  drawcatalog.c  drawcatalog.cc  drawcatalog.h  drawclasses.h  drawcmds.cc  drawcmds.h  drawcomps.c  drawcomps.h  drawcreator.cc  drawcreator.h  draweditor.c  draweditor.cc  draweditor.h  drawfunc.c  drawfunc.cc  drawfunc.h  drawimport.c  drawimport.h  (+35 more)
src/FrameUnidraw/: Imakefile  Makefile  WishList  framecatalog.c  framecatalog.cc  framecatalog.h  frameclasses.h  framecmds.c  framecmds.h  framecomps.c  framecomps.h  framecreator.c  framecreator.h  frameeditor.c  frameeditor.h  framefile.c  framefile.h  framefunc.c  framefunc.h  frameimport.cc  frameimport.h  framekit.c  framekit.h  frameps.c  frameps.h  framescripts.c  framescripts.h  framestates.c  framestates.h  frameviewer.c  frameviewer.h  frameviews.c  frameviews.h
src/GraphUnidraw/: Imakefile  Makefile  WishList  edgecomp.c  edgecomp.cc  edgecomp.h  graphcatalog.c  graphcatalog.h  graphclasses.h  graphcmds.c  graphcmds.h  graphcomp.c  graphcomp.h  graphcreator.c  graphcreator.h  graphdata.c  graphdata.h  graphdialog.cc  graphdialog.h  grapheditor.c  grapheditor.cc  grapheditor.h  graphexport.c  graphexport.cc  graphexport.h  graphimport.c  graphimport.h  graphkit.c  graphkit.h  graphtools.c  graphtools.h  nodecomp.c  nodecomp.cc  nodecomp.h
src/IV/: Imakefile  InterViews.defaults  Makefile
src/IV-2_6/: Imakefile  Makefile  adjuster2_6.c  adjuster2_6.cc  banner.c  banner.cc  border2_6.cc  box2_6.c  button2_6.c  button2_6.cc  control.c  control.cc  deck2_6.c  filebrowser.c  filebrowser.cc  filechooser.c  frame.c  frame.cc  interactor.c  interactor.cc  matcheditor.c  matcheditor.cc  menu2_6.c  message.c  painter.c  panner2_6.c  panner2_6.cc  perspective.c  rubband.cc  rubcurve.c  rubcurve.cc  rubline.c  rubrect.c  rubrect.cc  rubverts.c  scene.c  scroller2_6.c  scroller2_6.cc  sensor.c  strbrowser.c  (+22 more)
src/IV-X11/: Imakefile  Makefile  xbitmap.c  xbrush.c  xcanvas.cc  xcolor.c  xcolor.cc  xcursor.c  xdrag.c  xdrag.cc  xevent.c  xevent.cc  xfont.c  xfont.cc  xraster.c  xraster.cc  xreqerr.c  xselection.c  xselection.cc  xwindow.c  xwindow.cc
src/IV-common/: Imakefile  Makefile  listimpl.c  listimpl.cc  math.c  math.cc  memory.c  memory.cc  observe.c  regexp.c  regexp.cc  resource.c  resource.cc  string.c  string.cc  textbuffer.c  textbuffer.cc  tform2_6.c  tform2_6.cc  transformer.c  transformer.cc
src/IVGlyph/: Imakefile  Makefile  WishList  bdfltform.c  bdfltform.h  bdtable.c  (+73 more)
(+1556 files in other folders)
